# dev-utils-hub

./: .browserslistrc  .env.example  .gitignore  .vercelignore  BROWSER_SUPPORT.md  CHANGELOG.md  CLAUDE.md  LIGHTHOUSE_OPTIMIZATION.md  README.md  SENTRY_SETUP.md  coverage-output.txt  electron-builder.yml  electron.vite.config.ts  eslint.config.js  generate-icons.html  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  stryker.config.json  tailwind.config.js  tsconfig.app.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.strict.json  vercel.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
.storybook/: main.ts  preview.tsx
.taskmaster/: config.json  state.json
coverage/: coverage-final.json  index.html
dev-dist/: sw.js
docs/: API-TESTER.md  DEPLOYMENT_GUIDE.md
e2e/: api-tester-check.spec.ts  api-tester-core.spec.ts  base64-converter-manual-test.spec.ts  check-css.spec.ts  file-system-integration.spec.ts  hash-generator.spec.ts  json-formatter.spec.ts  production-tools.spec.ts  test-hover.spec.ts  tools-edge-cases.spec.ts  url-converter.spec.ts  uuid-file-system.spec.ts  visual-regression.spec.ts
playwright-report/: index.html
prd/: 20251023-init.txt
public/: sitemap.xml
scripts/: optimize-for-build.cjs  restore-package.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  main.rs  menu.rs  tray.rs
src-tauri/src/commands/: app.rs  clipboard.rs  dpi_probe.rs  encoding.rs  file.rs  history.rs  maintenance.rs  mod.rs  settings.rs
(+371 files in other folders)
