[package]
name = "dev-utils-hub"
version = "1.0.3"
description = "A collection of developer utilities for daily tasks"
authors = ["Jell"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
